# battery-data-format

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  arbin_sample_files.md  mypy.ini  pyproject.toml  ruff.toml
.github/workflows/: ci.yml  docs-deploy.yml  release.yml  sync-ontology.yml  update-ontology-snapshot.yml
data/: INT-37_0.95_3el_14022023_SNEL_10_5.ccs  SINTEF__LiGrR2032__2024-04-30__25degC__Landt.csv  datasets.json  metadata.json
docs/: api.rst  cli.rst  conf.py  get_started.rst  index.rst  quickstart.rst  reference.rst  user_guide.rst
docs/examples/: index.rst  ingest.rst  metadata.ipynb  metadata.rst  quickstart.rst  read.rst  registry.rst  remote_sources.py  repair.rst  table_parser.ipynb  units.rst  validate.ipynb  validate.rst  visualization.ipynb  visualization.rst
examples/: dataset.csvw.jsonld  dataset.html  dataset.schema+csvw.jsonld  dataset.schema.jsonld  ingest.ipynb  metadata.ipynb  metadata_parser.ipynb  normalizer_class.ipynb  plugins.ipynb  quickstart.ipynb  read.ipynb  registry.ipynb  remote_sources.py  repair.ipynb  table_parser.ipynb  units.ipynb  validate.ipynb  visualization.ipynb
scripts/: generate_docs.py  generate_zenodo_reference_bdf.py  ontology_sync_summary.py  warm_cache.py
src/bdf/: __init__.py  _df_compat.py  _explore.py  _ingest.py  _io.py  _registry.py  _source.py  clean.py  cli.py  datafetch.py  datasources.py  derive.py  detect.py  fetch.py  file_utils.py  harvest.py  head_utils.py  io.py  metadata.py  metadata_parsers.py  normalize.py  normalizer.py  normalizers.py  ontology_labels.py  plugins.py  readers.py  registry_ld.py  repair.py  sources.py  spec.py  table_normalizers.py  table_parsers.py  templates.py  time.py  validate.py  visualize.py
src/bdf/cyclers/: __init__.py  base.py  basytec_txt.py  biologic_mpt.py  landt_csv.py  landt_txt.py  neware_csv.py
src/bdf/data/: bdf-ontology-snapshot.ttl
src/bdf/data_sources/: __init__.py  arbin.py  base.py  (+16 more)
tests/: README.md  conftest.py  pytest.ini  test_detect_and_normalize.py  test_io_bdf_load.py  test_validate_bdf.py  test_visualize.py
tests/data/: tiny_arbin.csv  tiny_arbin.xlsx  tiny_arbin_multisheet.xlsx  tiny_basytec.txt  tiny_biologic.mpt  tiny_digatron.csv  tiny_landt.csv  tiny_neware.csv
tests/fixtures/: ontology_labels.ttl
tests/integration/: test_bdf_roundtrip.py  test_cases.py  test_column_validity.py  test_metadata_parsers.py  test_notebooks.py  test_plugins.py  test_raw_loading.py  test_registry_bdf_loading.py  test_table_normalizers.py  test_table_parsers.py  test_zenodo_derive_comparison.py  test_zenodo_validation_suite.py
tests/unit/: test_arbin.py  test_biologic.py  test_cli.py  test_datasources.py  test_derive.py  test_df_compat.py  test_explore.py  test_fetch.py  test_file_utils.py  test_head_utils.py  test_header_start_time.py  test_ingest.py  test_ingest_aliases.py  test_io.py  test_landt_ccs.py  test_matlab_mat.py  test_metadata_parsers.py  test_neware_xlsx.py  test_normalize.py  test_normalize_fallback.py  test_normalizer.py  test_normalizers.py  test_notebook_remote_sources.py  test_ontology_labels.py  test_parse_from_header.py  test_plugin_column_mappings.py  test_plugins.py  test_read_raw.py  test_readers.py  test_registry.py  test_registry_ld.py  test_repair.py  test_spec_ontology.py  test_spec_ontology_fields.py  test_table_normalizers.py  test_table_parsers.py  test_templates.py  test_time.py  test_timezone.py  test_validate.py  (+2 more)
(+32 files in other folders)
