[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "batterydf"
version = "0.1.0"
description = "Battery Data Format: load, convert, visualize, and publish"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Battery Data Alliance" }]
keywords = ["battery", "data", "time-series", "bdf", "csv", "parquet"]
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering",
]
dependencies = [
  "numpy>=1.24,<3.0",
  "pandas>=2.0",
  "pyarrow>=15.0",
  "rdflib>=7.0",
  "typer>=0.12",
  "rich>=13.7",
  "matplotlib>=3.8",
  "plotly",
  "nbformat>=4.2",
  "openpyxl>=3.1",
  "pydantic>=2.6",
  "requests>=2.31",
  "pint>=0.22",
  "NewareNDA"
]

[project.urls]
Homepage = "https://github.com/battery-data-alliance/battery-data-format"
Issues   = "https://github.com/battery-data-alliance/battery-data-format/issues"

[project.scripts]
bdf = "bdf.cli:app"

[project.entry-points."bdf.data_sources"]
biologic-mpt = "bdf.data_sources.biologic_mpt:BioLogicMPT"
neware-csv   = "bdf.data_sources.neware_csv:NewareCSV"
neware-nda   = "bdf.data_sources.neware_nda:NewareNDA"
neware-nda-fast = "bdf.data_sources.neware_nda:NewareNDAFast"

[project.optional-dependencies]
fastnda = ["fastnda"]
polars = ["polars", "fastnda"]
hvplot = ["hvplot", "holoviews", "bokeh"]
numpy2 = ["numpy>=2.0,<3.0"]
dev = [
  "pytest",
  "pytest-cov",
  "ruff",
  "mypy",
  "nbclient>=0.9",
  "nbformat>=5.9",
  "ipykernel>=6.0",
  "pre-commit>=4.6.0",
]
docs = [
  "sphinx>=7.0",
  "pydata-sphinx-theme>=0.15",
  "sphinx-autobuild>=2024.4.16",
  "sphinx-design>=0.6",
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[tool.hatch.build.targets.wheel]
packages = [
  "src/bdf",
]
include = [
  "src/bdf/schemas/*.json",
]

[tool.hatch.build.targets.sdist]
include = [
  "src/bdf/**",
  "src/bdf/schemas/*.json",
  "README.md",
  "pyproject.toml",
]
